Sposta gurobi env in Start